--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.3.1
+asgiref==3.8.1
 async-timeout==5.0.1
 billiard==4.2.1
 celery==5.5.2
@@ -7,11 +8,22 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+Cython==3.1.1
+Django==5.2.2
+django-jazzmin==3.0.1
+djangorestframework==3.16.0
+future==1.0.0
 kombu==5.5.3
+mysqlclient==2.2.7
+ply==3.11
 prompt_toolkit==3.0.51
 python-dateutil==2.9.0.post0
+pyzk==0.9
 redis==6.1.0
 six==1.17.0
+sqlparse==0.5.3
+thriftpy2==0.5.2
 tzdata==2025.2
 vine==5.1.0
 wcwidth==0.2.13
+zk==0.9.4
