--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ amqp==5.3.1
 asgiref==3.8.1
 async-timeout==5.0.1
 billiard==4.2.1
+Brotli==1.1.0
 celery==5.5.2
 click==8.2.1
 click-didyoumean==0.3.1
@@ -13,17 +14,23 @@ Django==5.2.2
 django-jazzmin==3.0.1
 djangorestframework==3.16.0
 future==1.0.0
+gunicorn==23.0.0
+h11==0.16.0
 kombu==5.5.3
 mysqlclient==2.2.7
+packaging==25.0
 ply==3.11
 prompt_toolkit==3.0.51
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 pyzk==0.9
 redis==6.1.0
 six==1.17.0
 sqlparse==0.5.3
 thriftpy2==0.5.2
 tzdata==2025.2
+uvicorn==0.34.3
 vine==5.1.0
 wcwidth==0.2.13
+whitenoise==6.9.0
 zk==0.9.4
