ADDED: Added requirements with PyMySQL

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,10 @@ future==1.0.0
 gunicorn==23.0.0
 h11==0.16.0
 kombu==5.5.3
-mysqlclient==2.2.7
 packaging==25.0
 ply==3.11
 prompt_toolkit==3.0.51
+PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 pyzk==0.9
