ADD DOTENV AND ADD REQUIREMENTS

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ DB_USER=uwgscpssfmojt2o2
 DB_PASSWORD=SdGNYxKRMXNkw0FLxTtE
 DB_HOST=bdwbnbsgkymywnzhfxgn-mysql.services.clever-cloud.com
 DB_PORT=3306
+
+BIOMETRICO_IP_ZKTECO=192.168.0.8
+BIOMETRICO_PORT_ZKTECO=4370
+
+BIOMETRICO_IP_FINGERTEC=
+BIOMETRICO_PORT_FINGERTEC=
