--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ pycparser==2.22
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-dotenv==1.1.1
 pyzk==0.9
 redis==6.1.0
 six==1.17.0
