--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ cryptography==45.0.3
 Cython==3.1.1
 Django==5.2.2
 django-jazzmin==3.0.1
+django-widget-tweaks==1.5.0
 djangorestframework==3.16.0
 future==1.0.0
 gunicorn==23.0.0
