--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-altgraph==0.17.4
 amqp==5.3.1
 asgiref==3.8.1
 async-timeout==5.0.1
@@ -25,20 +24,17 @@ h11==0.16.0
 idna==3.10
 kombu==5.5.3
 packaging==25.0
-pefile==2023.2.7
 ply==3.11
 prompt_toolkit==3.0.51
 pycparser==2.22
-pyinstaller==6.14.2
-pyinstaller-hooks-contrib==2025.5
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.1.1
-pywin32-ctypes==0.2.3
 pyzk==0.9
 redis==6.1.0
 requests==2.32.4
+setuptools==75.9.1
 six==1.17.0
 sqlparse==0.5.3
 thriftpy2==0.5.2
@@ -46,6 +42,7 @@ tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.34.3
 vine==5.1.0
+waitress==3.0.2
 wcwidth==0.2.13
 whitenoise==6.9.0
 zk==0.9.4
