--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ DB_USER=uwgscpssfmojt2o2
 DB_PASSWORD=SdGNYxKRMXNkw0FLxTtE
 DB_HOST=bdwbnbsgkymywnzhfxgn-mysql.services.clever-cloud.com
 DB_PORT=3306
+IP_BIOMETRICO=192.168.0.3
+PUERTO_BIOMETRICO=4370
+NOMBRE_ESTACION=La Soledad
+TOKEN_API=36a8a5bc0f8d28d8ea2d62d67aacba1af0baa9ac
